# finalCompAGI

./: .env.template  .pre-commit-config.yaml  404.html  index.html  pyproject.toml  run  search.html  sitemap.xml
.github/workflows/: ci.yml  pr-closed.yml
autogpt/: main.py
autogpt/agent/: agent.py
autogpt/commands/: execute_code.py  file_operations.py  task_statuses.py  web_search.py
autogpt/llm/: base.py  chat.py
autogpt/llm/providers/: openai.py
autogpt/llm/utils/: __init__.py  token_counter.py
autogpt/memory/: local.py  message_history.py  redismem.py
autogpt/models/: command.py
challenges/beat/: index.html
challenges/building_challenges/: index.html
challenges/challenge_template/: index.html
challenges/information_retrieval/challenge_a/: index.html
challenges/introduction/: index.html
challenges/list/: index.html
challenges/submit/: index.html
code-of-conduct/: index.html
configuration/imagegen/: index.html
configuration/memory/: index.html
configuration/options/: index.html
configuration/search/: index.html
configuration/voice/: index.html
contributing/: index.html
docs/: usage.md
docs/configuration/: options.md
plugins/: index.html
search/: search_index.json
setup/: index.html
swiftygpt/: __init__.py  agent.py  agent_factory.py  cli.py  schema.py
swiftygpt/LLM/: openai_povider.py
swiftygpt/messaging/: kafka_channel.py  message_broker.py  messages.py  queue_channel.py
testing/: index.html
tests/unit/: test_file_operations.py  test_web_search.py
usage/: index.html
(+8 files in other folders)
